Write valid UTF8 characters without escaping.

Summary:
commit 6a18528 introduced escaping of bytes >= 127 to ensure that
KConfig files are valid UTF8.
The simplistic approach with a cutoff results in many escaped bytes
where it is not required. Especially non-western configuration files
would have many escapes.

This commit fixes that by only escaping bytes that are not valid UTF8.

BUG: 403557
FIXED-IN: 5.56

Test Plan: ninja && ninja test

Reviewers: dfaure, arichardson, apol, #frameworks, thiago

Subscribers: rapiteanu, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D19107